# MadMolecool

./: README.md  app.py  chemcyclopedia_routes.py  convertjsondata.py  dataset_creation.py  db_config.py  finetune_llm.py  formatted_data_small.txt  inference_code.py  llm_test.py  notebook_routes.py  pubchem_routes.py  pyproject.toml  text_gen.py
Backend/: README.md  app.py  chemcyclopedia_routes.py  finetune_llm.py  formatted_data.txt  notebook_routes.py  openvino_inference.py
Frontend/: next.config.mjs  package-lock.json  package.json
Frontend/src/app/: chemcyclopedia.js  landing.js  layout.js  page.js
Frontend/src/app/chemcyclopedia/: page.js
Frontend/src/app/notebooks/: page.js
Frontend/src/app/notebooks/edit/[notebookid]/: page.js
Frontend/src/components/: Navbar.jsx  NoNotebookCard.jsx
Frontend/src/components/book/: Book.css  Book.jsx  NoteBook.css  NoteBook.js
Frontend/src/components/create/: CreateNoteBook.jsx  upload.js
Frontend/src/components/notebook/: DeleteNoteBook.jsx  NotebookMenu.jsx
Frontend/src/lib/: actions.js  utils.js
Frontend/src/providers/: AuthProvider.js  TanStack.js
