[tool.poetry]
name = "MadMolecool"
version = "0.1.0"
description = ""
authors = ["Ibraheem Khan <pikhan@protonmail.com>, Fiorina Chau <fchau@nevada.unr.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pymongo = "^4.7.0"
flask-cors = "^4.0.0"
transformers = "^4.40.1"
tensorflow = "^2.16.1"

[tool.poetry.group.dev.dependencies]
setuptools = "^69.5.1"
wheel = "^0.43.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
